--- a/styles/globals.css
+++ b/styles/globals.css
@@ -18,3 +18,48 @@ a {
 * {
   box-sizing: border-box;
 }
+
+.table {
+  display: table;
+  position: relative;
+  text-align: left;
+  text-indent: 0;
+  border-color: inherit;
+  border-collapse: collapse;
+  white-space: nowrap;
+}
+
+.table-compact :where(th, td) {
+  padding: 0.5rem;
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
+
+.table-auto {
+  table-layout: auto;
+}
+
+.badge {
+  display: inline-flex;
+  height: 1.25rem;
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+  width: -moz-fit-content;
+  width: fit-content;
+  padding-left: 0.563rem;
+  padding-right: 0.563rem;
+  border-width: 1px;
+  border-radius: var(--rounded-badge, 1.9rem);
+}
+
+.badge-outline.badge-primary {
+  --tw-text-opacity: 1;
+  color: hsl(var(--p) / var(--tw-text-opacity));
+}
+
+.badge-outline {
+  border-color: currentColor;
+  --tw-border-opacity: 0.5;
+  background-color: transparent;
+  color: currentColor;
+}
